<resources>
    <string name="app_name">GADS LeaderBoard</string>
    <string name="leaderboard_title">LeaderBoard</string>
    <string name="image_gads_logo">GADS Logo</string>

    <!-- Fragment Tags -->
    <string name="tag_learning_leaders">Learning Leaders</string>
    <string name="tag_skill_iq_leaders">Skill IQ Leaders</string>

    <!-- Image Placeholders - Content Description -->

    <!-- Dummy Layout Placeholders -->
    <string name="dummy_name">John Doe</string>
    <string name="dummy_list_item_content_description">Lorean Ipsum Text, Country</string>

    <!-- Gson Serializable Strings -->
    <string name="gson_serializable_name">name</string>
    <string name="gson_serializable_score">score</string>
    <string name="gson_serializable_hours">hours</string>
    <string name="gson_serializable_country">country</string>
    <string name="gson_serializable_badge_url">badgeUrl</string>

    <!-- API Resource URLs -->
    <string name="leaderboard_base_url">https://gadsapi.herokuapp.com/</string>
    <string name="submission_base_url">https://docs.google.com/forms/d/e/</string>

    <string name="api_part_hours">api/hours</string>
    <string name="api_part_skill_iq">api/skilliq</string>
    <string name="submit">Submit</string>

    <!-- Submission details -->
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="alert_submission_success">Submission Successul</string>
    <string name="alert_submission_failure">Submission not Successful</string>
    <string name="submission_confirmation_message"> Are you sure?</string>

</resources>