<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    tools:context=".SubmissionActivity">

    <ImageView
        android:id="@+id/image_gads_logo"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:contentDescription="@string/image_gads_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gads_logo"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_submission"
        android:textAlignment="center"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/text_size_titles"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/image_gads_logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/tvFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:padding="@dimen/standard_padding"
            android:text="@string/first_name"
            android:textSize="@dimen/text_size_names" />

        <EditText
            android:id="@+id/tvLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:padding="@dimen/standard_padding"
            android:text="@string/last_name"
            android:textSize="@dimen/text_size_names" />

    </LinearLayout>

    <EditText
        android:id="@+id/tvEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:background="@color/color_white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="@dimen/standard_padding"
        android:text="@string/email_address"
        android:textSize="@dimen/text_size_names"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/tvProjectUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@color/color_white"
        android:padding="@dimen/standard_padding"
        android:text="@string/project_on_github_link"
        android:textSize="@dimen/text_size_names"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailAddress" />

    <Button
        android:id="@+id/btnSubmitProject"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button_layout"
        android:backgroundTint="@color/color_orange"
        android:text="@string/submit"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProjectUrl" />
</androidx.constraintlayout.widget.ConstraintLayout>